--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "expensify",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "Mauaa Datta",
   "license": "MIT",
   "scripts": {
     "predeploy": "npm run build",
