--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "author": "Mauaa Datta",
   "scripts": {
-    "serve": "live-server public/",
     "build": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -24,11 +23,8 @@
     "css-loader": "0.28.4",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.0.1",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "jest": "20.0.4",
-    "live-server": "^1.2.0",
     "moment": "2.18.1",
     "node-sass": "4.14.1",
     "normalize.css": "7.0.0",
@@ -40,16 +36,18 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
-    "react-test-renderer": "^16.0.0",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "3.1.0"
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
+    "enzyme": "^3.0.0",
+    "enzyme-to-json": "^3.0.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "^16.0.0",
+    "webpack-dev-server": "2.5.1"
   }
 }
