--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
@@ -25,6 +26,7 @@
     "enzyme-adapter-react-16": "^1.0.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "firebase": "^7.15.0",
     "moment": "2.18.1",
     "node-sass": "4.14.1",
     "normalize.css": "7.0.0",
