--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 node_modules
 package-lock.json
 yarn.lock
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+public/dist
+.env.test
+.env.development
